tests/diagnostics_golden/diag_null_deref.txt
Diagnostics Golden: Null Dereference
Source: tests/negative/neg_rule4_null_deref.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_rule4_null_deref.safe:14:14: error: dereference of possibly null reference
  |
  | 14 |       return p.value  -- ERROR: P may be null
  |    |              ^~~~~~~
  |
  note: p is of type value_box, which is a nullable reference.
  note: no null check precedes this dereference on all paths reaching
        this program point.
  note: rule: D27 Rule 4 (Not-Null Dereference)
  note: per spec/02-restrictions.md section 2.8.4 paragraph 136:
        "Dereference of a reference value shall require the reference subtype
        to be not null. A conforming implementation shall reject any
        dereference where the reference subtype at the point of dereference
        does not exclude null."
  suggestion: use a "not null" reference subtype, or add an explicit null check:
        if p /= null then
           -- dereference p here
        end if;
------------------------------------------------------------------------
